--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
+        "pestphp/pest": "^1.0",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
